prevent product image clipping

--- a/assets/product-image-swiper.css
+++ b/assets/product-image-swiper.css
@@ -2,7 +2,8 @@
     text-align: center;
     font-size: 18px;
     background: #fff;
-
+    background-size: cover;
+    background-position: center;
     /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
@@ -33,11 +34,6 @@
     margin-right: auto;
     width: 100%;
     height: 100%;
-}
-
-.swiper-slide {
-    background-size: cover;
-    background-position: center;
 }
 
 .mySwiper2 {
@@ -84,9 +80,12 @@
     border: 1px solid black; 
 }
 
-/*.mySwiper2 .swiper-slide {
-    height: auto;
-}*/
+.mySwiper2 .swiper-slide {
+    /*height: auto;*/
+    height: 100%;
+    display: block;
+    position: relative;
+}
 
 .mySwiper2 .swiper-wrapper {
     align-items: center;
@@ -109,7 +108,8 @@
         display: flex;
     }
     .mySwiper2 .swiper-wrapper {
-        max-height: 600px;
+        max-height: 900px;
+        height: 700px;
     }
 }
 
